# Cinderella

./: .cinderella.toml  .gitignore  Cargo.toml  LICENSE  Makefile  ProjectOutline.md  README.md
analysis/: Variables.md
hooks/: post-update
src/: config.rs  crypto.rs  dashboard.rs  execution.rs  lib.rs  mail.rs  main.rs  parser.rs  pipeline.rs  variables.rs  vcs.rs
tests/: cli.rs
