[package]
name = "cinderella"
# version is automatically set in the build pipeline
version = "0.0.1-dev"
authors = ["Stefan Koch <programming@stefan-koch.name>"]
edition = "2018"

[dependencies]
getopts = "0.2"
git2 = { version = "0.10.0", features = ["vendored-openssl"] }
rand = "0.7.0"
toml = { version = "0.5", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.14.0"
evalexpr = "5"
lettre = "0.9"
lettre_email = "0.9"
sodiumoxide = "0.2.5"
rpassword = "4.0"
duct = "0.13"
log = "0.4"
env_logger = "0.7"

[dev-dependencies]
tempfile = "3"
assert_cmd = "0.11"
